crates/pipdock-cli/tests/snapshots/golden__schema-SnapshotMeta.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: out
---
{
  "$defs": {
    "EngineId": {
      "description": "Which resolver PipDock is driving.",
      "oneOf": [
        {
          "const": "pip",
          "description": "`<python> -m pip …`",
          "type": "string"
        },
        {
          "const": "uv",
          "description": "`uv pip … --python <python>`",
          "type": "string"
        }
      ]
    },
    "Trigger": {
      "description": "What caused a snapshot to be taken. Shown as the trigger label on the timeline (UI-SPEC §4).",
      "oneOf": [
        {
          "additionalProperties": false,
          "description": "Taken automatically before a plan executed.",
          "properties": {
            "plan": {
              "properties": {
                "planId": {
                  "description": "The plan's id, so a summary and its snapshot can be tied together.",
                  "type": "string"
                }
              },
              "required": [
                "planId"
              ],
              "type": "object"
            }
          },
          "required": [
            "plan"
          ],
          "type": "object"
        },
        {
          "additionalProperties": false,
          "description": "Taken automatically before a rollback, because a rollback is itself reversible\n(DATA-FLOW §8).",
          "properties": {
            "rollback": {
              "properties": {
                "restoring": {
                  "description": "The snapshot being restored.",
                  "type": "string"
                }
              },
              "required": [
                "restoring"
              ],
              "type": "object"
            }
          },
          "required": [
            "rollback"
          ],
          "type": "object"
        },
        {
          "const": "manual",
          "description": "Taken because the user asked.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "The `.meta.json` sidecar (ARCHITECTURE §6).\n\nThis type serves twice: it is the on-disk sidecar *and* what `snapshot list --json` emits, so\nit is in `SCHEMA_TYPES`. The camelCase spelling is the wire contract, and the `alias`\nattributes are what keep sidecars written before that change readable — a snapshot that no\nlonger parses is a rollback the user silently cannot perform, which is the one failure this\nmodule exists to prevent. Removable once no pre-1.0 snapshot can plausibly still be on disk.",
  "properties": {
    "appVersion": {
      "description": "PipDock's version, so an old snapshot can be interpreted by a newer build.",
      "type": "string"
    },
    "createdAt": {
      "description": "When it was taken, RFC 3339.",
      "type": "string"
    },
    "engine": {
      "$ref": "#/$defs/EngineId",
      "description": "Which engine produced the freeze.\n\nLoad-bearing: pip freezes with `--all` and includes pip/setuptools, uv has no such flag and\nomits them (DATA-FLOW §7). Without this, a diff across engines would read as \"pip was\nuninstalled\"."
    },
    "id": {
      "description": "Snapshot id, which is also its filename stem.",
      "type": "string"
    },
    "packageCount": {
      "description": "How many distributions the freeze recorded.",
      "format": "uint",
      "minimum": 0,
      "type": "integer"
    },
    "trigger": {
      "$ref": "#/$defs/Trigger",
      "description": "Why it was taken."
    }
  },
  "required": [
    "id",
    "createdAt",
    "trigger",
    "engine",
    "packageCount",
    "appVersion"
  ],
  "title": "SnapshotMeta",
  "type": "object"
}
