crates/pipdock-cli/tests/snapshots/golden__schema-StepResult.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: out
---
{
  "$defs": {
    "Code": {
      "description": "Every code PipDock can surface at v1 launch.\n\n`docs/TESTING.md` §2 requires at least one captured stderr fixture per variant before ship;\nthe test that enforces \"no code without fixture\" lives beside the classifiers.",
      "oneOf": [
        {
          "const": "PD-ENV-001",
          "description": "Interpreter path missing or not executable — the env was deleted or moved.",
          "type": "string"
        },
        {
          "const": "PD-ENV-002",
          "description": "PEP 668 `EXTERNALLY-MANAGED` marker present; mutation blocked by default.",
          "type": "string"
        },
        {
          "const": "PD-ENV-003",
          "description": "`probe.py` exited non-zero or produced unparseable output.",
          "type": "string"
        },
        {
          "const": "PD-ENG-001",
          "description": "pip or uv binary not found.",
          "type": "string"
        },
        {
          "const": "PD-ENG-002",
          "description": "pip older than 22.2, which predates `--dry-run --report`.",
          "type": "string"
        },
        {
          "const": "PD-ENG-003",
          "description": "uv emitted a shape the adapter does not recognize (uv newer than PipDock).",
          "type": "string"
        },
        {
          "const": "PD-ENG-999",
          "description": "Fallback for engine failures no classifier matched. Always last.",
          "type": "string"
        },
        {
          "const": "PD-RES-001",
          "description": "`ResolutionImpossible` or the uv equivalent: constraints cannot be satisfied.",
          "type": "string"
        },
        {
          "const": "PD-RES-002",
          "description": "Plan older than 10 minutes, or the env's probe hash changed since the preview.",
          "type": "string"
        },
        {
          "const": "PD-RES-003",
          "description": "A plan is already resolving or executing in this session.\n\nThe GUI drives one resumable flow across several IPC calls, so \"start a plan\" and \"run the\nplan\" are different messages arriving at different times — nothing structurally stops a\nsecond one arriving in between. Refusing is the only safe answer: two concurrent plans\nwould interleave engine commands against one environment, and DATA-FLOW §9.3's staleness\ncheck would be comparing against a set the other plan is busy changing.",
          "type": "string"
        },
        {
          "const": "PD-BLD-001",
          "description": "MSVC build tools required but absent.",
          "type": "string"
        },
        {
          "const": "PD-BLD-002",
          "description": "Build backend failed (`pyproject.toml` error, `metadata-generation-failed`).",
          "type": "string"
        },
        {
          "const": "PD-BLD-003",
          "description": "Generic sdist wheel-build failure.",
          "type": "string"
        },
        {
          "const": "PD-PKG-001",
          "description": "No matching distribution, and metadata shows a requires-python mismatch.",
          "type": "string"
        },
        {
          "const": "PD-PKG-002",
          "description": "No matching distribution: name or version typo, or the release is gone.",
          "type": "string"
        },
        {
          "const": "PD-PKG-003",
          "description": "The requested release was yanked.",
          "type": "string"
        },
        {
          "const": "PD-PKG-004",
          "description": "Downloaded artifact failed hash verification.",
          "type": "string"
        },
        {
          "const": "PD-NET-001",
          "description": "Timeout, connection aborted, or DNS failure.",
          "type": "string"
        },
        {
          "const": "PD-NET-002",
          "description": "TLS/SSL verification failed — typically proxy or AV interception.",
          "type": "string"
        },
        {
          "const": "PD-NET-010",
          "description": "PEP 691 index refresh failed; the stale index stays searchable.",
          "type": "string"
        },
        {
          "const": "PD-NET-011",
          "description": "Code Health tools-venv bootstrap could not reach PyPI.",
          "type": "string"
        },
        {
          "const": "PD-PRM-001",
          "description": "`PermissionError` writing site-packages (admin-owned Python).",
          "type": "string"
        },
        {
          "const": "PD-PRM-002",
          "description": "File locked by a running process (`WinError 32`).",
          "type": "string"
        },
        {
          "const": "PD-SNP-001",
          "description": "Snapshot write failed before execution. **The plan is aborted; nothing runs.**",
          "type": "string"
        },
        {
          "const": "PD-SNP-002",
          "description": "A release needed to restore a snapshot is no longer available on PyPI.",
          "type": "string"
        },
        {
          "const": "PD-SYS-001",
          "description": "`MAX_PATH` exceeded without the long-path opt-in.",
          "type": "string"
        },
        {
          "const": "PD-SYS-002",
          "description": "Disk full.",
          "type": "string"
        },
        {
          "const": "PD-HLT-001",
          "description": "A Code Health tool is missing from the tools venv.",
          "type": "string"
        },
        {
          "const": "PD-HLT-002",
          "description": "A Code Health tool exited non-zero.",
          "type": "string"
        },
        {
          "const": "PD-HLT-003",
          "description": "A Code Health tool exceeded its watchdog timeout; partial report shown.",
          "type": "string"
        },
        {
          "const": "PD-INT-001",
          "description": "A PipDock bug: panic or unexpected state.",
          "type": "string"
        }
      ]
    },
    "PkgName": {
      "description": "A PEP 503-normalized distribution name.\n\nConstructing one is the *only* way a package name reaches an argv array, which is what makes\nSECURITY §2's \"validated before it reaches argv\" claim structural rather than aspirational.",
      "type": "string"
    },
    "StepStatus": {
      "description": "Outcome of a single package's step.",
      "oneOf": [
        {
          "const": "ok",
          "description": "Applied successfully.",
          "type": "string"
        },
        {
          "const": "failed",
          "description": "Failed; carries a catalog code. Does **not** abort the batch.",
          "type": "string"
        },
        {
          "const": "skipped",
          "description": "Not attempted — user cancelled, or dropped by a Skip decision.",
          "type": "string"
        }
      ]
    },
    "Version": {
      "description": "A version string as the engine reported it. Never reshaped or localized (I18N §2).",
      "type": "string"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "One row of the summary report (DATA-FLOW §6).",
  "properties": {
    "code": {
      "anyOf": [
        {
          "$ref": "#/$defs/Code"
        },
        {
          "type": "null"
        }
      ],
      "description": "Catalog code, present exactly when `status` is `Failed`."
    },
    "from": {
      "anyOf": [
        {
          "$ref": "#/$defs/Version"
        },
        {
          "type": "null"
        }
      ],
      "description": "Version before the step, absent for a fresh install."
    },
    "pkg": {
      "$ref": "#/$defs/PkgName",
      "description": "Normalized distribution name."
    },
    "status": {
      "$ref": "#/$defs/StepStatus",
      "description": "Whether it applied."
    },
    "stderrTail": {
      "description": "Tail of the engine's stderr for the failure detail pane.",
      "type": [
        "string",
        "null"
      ]
    },
    "to": {
      "anyOf": [
        {
          "$ref": "#/$defs/Version"
        },
        {
          "type": "null"
        }
      ],
      "description": "Version the step targeted."
    }
  },
  "required": [
    "pkg",
    "status"
  ],
  "title": "StepResult",
  "type": "object"
}
